# LimoBeachCleaning

./: .gitignore  README.md  rtab.rviz
LimoBeachCleaning/advanced_perception/: package.xml
LimoBeachCleaning/advanced_perception/advanced_perception/: yolo_object_detection.py
LimoBeachCleaning/attach_gazebo/: setup.cfg
LimoBeachCleaning/attach_gazebo/attach_gazebo/: attach_client.py
LimoBeachCleaning/beach_world/: CMakeLists.txt
LimoBeachCleaning/beach_world/env-hooks/: beach_world.sh.in
LimoBeachCleaning/beach_world/launch/: world_cloud.launch.py
LimoBeachCleaning/beach_world/worlds/: beach_world.sdf  beach_world_cloud.sdf  test.sdf
LimoBeachCleaning/cobot/mycobot_description/: CMakeLists.txt  package.xml
LimoBeachCleaning/custom_msgs/: CMakeLists.txt
LimoBeachCleaning/husarion_gz_worlds/config/: teleop.config
LimoBeachCleaning/imu_sensor_broadcaster/src/: imu_sensor_broadcaster.cpp  imu_sensor_broadcaster_parameters.yaml
LimoBeachCleaning/imu_sensor_broadcaster/test/: imu_sensor_broadcaster_params.yaml  test_imu_sensor_broadcaster.cpp  test_imu_sensor_broadcaster.hpp
LimoBeachCleaning/limo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
LimoBeachCleaning/limo_moveit_config/config/: limo_four_diff.srdf  limo_four_diff.urdf.xacro  moveit.rviz  moveit_controllers.yaml
LimoBeachCleaning/limo_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py
LimoBeachCleaning/limo_robot/limo_nav/: package.xml  setup.cfg  setup.py
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/: CMakeLists.txt  package.xml
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/launch/: gazebo_models_diff_mod.launch.py  gazebo_models_diff_mod_arm.launch.py  limo_combined.launch.py
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/gas_bottle/: model.config  model.sdf
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/office/: model.config  model.sdf
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/perception_lab/: model.config  model.sdf
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/perception_lab/meshes/: perception_plane_v2.dae
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/perception_table/: model.config  model.sdf
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/plane/materials/scripts/: plane.material
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/robotics_gym/: model.sdf
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/turtlebot3_room/: model.sdf
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/models/turtlebot3_room/meshes/: room.stl  turtleroom_v2.dae
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/urdf/: limo_four_diff_arm.xacro  limo_xacro.xacro  limo_xacro_new.xacro
LimoBeachCleaning/limo_robot/limo_ros2_pkgs/limo_description/worlds/: simple.world
LimoBeachCleaning/limo_rtabmap/: CMakeLists.txt  package.xml
LimoBeachCleaning/moveit2_scripts/launch/: pick_server2.launch.py  test_trajectory.launch.py  (+3 more)
LimoBeachCleaning/path_planner_server/: setup.py
LimoBeachCleaning/yolo/: setup.py
advanced_perception/: setup.py
advanced_perception/advanced_perception/: yolo_person_follower.py
attach_gazebo/: package.xml  setup.py
beach_world/: package.xml
beach_world/launch/: world.launch.py  world_cloud_new.launch.py
beach_world/worlds/: beach_world_2.sdf  beach_world_test.sdf  new_world.sdf
custom_msgs/: package.xml
diff_drive_controller/src/: diff_drive_controller.cpp
gazebo_plugins_ros_mod/tc_gazebo_plugins/: CMakeLists.txt
gazebo_plugins_ros_mod/tc_gazebo_plugins/src/: gazebo_ros_camera.cpp  gazebo_ros_force.cpp  gazebo_ros_gps_sensor.cpp  gazebo_ros_harness.cpp  gazebo_ros_joint_pose_trajectory.cpp  gazebo_ros_p3d.cpp  gazebo_ros_ray_sensor.cpp  gazebo_ros_vacuum_gripper.cpp  gazebo_ros_video.cpp  gazebo_ros_wheel_slip.cpp
get_pose_client/: package.xml
get_pose_client/src/: get_pose_client.cpp  get_pose_clientv1.cpp
husarion_gz_worlds/: CMakeLists.txt
husarion_gz_worlds/launch/: gz_sim.launch.py
limo_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  limo_four_diff.ros2_control.xacro
limo_moveit_config/launch/: moveit_rviz.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
limo_rtabmap/launch/: start_rtab_map.launch.py  start_rtab_map_loc.launch.py
limo_rtabmap/rviz/: rtab.rviz
moveit2_scripts/: CMakeLists.txt  package.xml
moveit2_scripts/launch/: pick_place.launch.py  pick_server.launch.py  test_gripper.launch.py
moveit2_scripts/src/: pick_server.cpp  pick_server2.cpp  test_gripper.cpp  test_trajectory.cpp  test_trajectory3.cpp
mycobot_sim/start_scripts/: launch_mycobotarm.sh
nav2_application/: setup.py
nav2_application/scripts/: robot_patrol.py
path_planner_server/: package.xml
path_planner_server/config/: bt_navigator.yaml
path_planner_server/launch/: rtab_navigation.launch.py
ros_components_description/: CMakeLists.txt  README.md
ros_components_description/config/: gz_orbbec_astra_remappings.yaml  gz_ouster_os_remappings.yaml  gz_slamtec_rplidar_remappings.yaml  gz_stereolabs_zed_remappings.yaml  kinova_7dof_controllers.yaml  robotiq_controllers.yaml  ur_controllers.yaml
ros_components_description/launch/: gz_components.launch.py  gz_kinova_7dof.launch.py  gz_orbbec_astra.launch.py  gz_ouster_os.launch.py  gz_stereolabs_zed.launch.py  gz_ur.launch.py
ros_components_description/test/: component.urdf.xacro
ros_components_description/urdf/: components.urdf.xacro  kinova.urdf.xacro  ouster.urdf.xacro  robotiq.urdf.xacro  slamtec_rplidar_a2.urdf.xacro  slamtec_rplidar_s2.urdf.xacro  slamtec_rplidar_s3.urdf.xacro  velodyne_puck.urdf.xacro
universal_robot_ros2/robotiq_85_gripper/robotiq_85_description/: CMakeLists.txt
yolo/: inst.txt  package.xml
yolo/easy-yolov7/: detect.py  webros.py
yolo/params/: final.data  final.pgm  my_map.yaml
yolo/rviz/: nav2_config.rviz
(+126 files in other folders)
